correction IE

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -676,12 +676,14 @@
   background: $burgundy2;
   z-index: 100000;
   display: flex;
+  align-items: center;
 }
 
 .loader__gif {
-  margin: auto;
+  margin: 0 auto;
   width: 50%;
   max-width: 200px;
+  max-height: 317px;
   @media screen and (max-width: $desktop) and (orientation: landscape){
     height: 75%;
     width: auto;
